<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="userInfo"
            type="es.uam.eps.dadm.cards.UserInfo" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@mipmap/new_launcher_round">
        </ImageView>

            <LinearLayout
                android:layout_width="325dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/username_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_height="50dp"
                    android:layout_width="300dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/username_edit"
                        android:layout_height="match_parent"
                        android:layout_width="280dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/blue"
                        android:text="@{userInfo.username}"
                        android:hint="@string/username_hint"/>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="325dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/password_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_height="50dp"
                    android:layout_width="300dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/password_edit"
                        android:layout_height="match_parent"
                        android:layout_width="280dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/blue"
                        android:inputType="textPassword"
                        android:text="@{userInfo.password}"
                        android:hint="@string/password_hint"/>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/log_in_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/blue"
                android:text="@string/log_in_text"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/sign_up_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_text"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

</layout>