<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:text="@string/decks_text"
                android:textSize="27sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="55sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:background="@color/blue"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card_recycler_view_deck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60sp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_deck_fab"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:tint="@color/white"
            android:src="@drawable/ic_baseline_list_alt_24"
            app:tint="@color/white"
            app:backgroundTint="@color/blue"
            android:contentDescription="@string/new_deck_description" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/upload_firebase_fab"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:tint="@color/white"
            android:src="@drawable/ic_baseline_local_fire_department_24"
            app:tint="@color/white"
            app:backgroundTint="@color/orange"
            android:contentDescription="@string/upload_firebase_description" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>